[package]
name = "sui_ns_lookup"
version = "0.1.0"
edition = "2021"
description = "Async SuiNS forward and reverse lookup via Sui JSON-RPC"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bielkej/sui-ns-lookup"
homepage = "https://github.com/bielkej/sui-ns-lookup"
keywords = ["sui", "suins", "blockchain", "name-service"]
categories = ["api-bindings", "web-programming"]

[dependencies]
anyhow = "1"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
